# audio-plugin-coder

./: .gitignore  tmp_expv3_csv.ps1
plugins/Experimental_Osm/: CMakeLists.txt  status.json
plugins/Experimental_Osm/.ideas/: architecture.md  creative-brief.md
plugins/Experimental_Osm/Design/: v1-style-guide.md  v1-test.html
plugins/Experimental_Osm/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Experimental_Osm/Source/ui/public/: index.html
plugins/Experimental_Osm/Source/ui/public/js/: index.js
plugins/Experimental_osmium_v2/: CMakeLists.txt  TESTING_GUIDE.md  status.json
plugins/Experimental_osmium_v2/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Experimental_osmium_v2/Source/ui/public/: index.html
plugins/Experimental_osmium_v2/Source/ui/public/js/: index.js
plugins/Experimental_osmium_v3/: CMakeLists.txt  IMPLEMENTATION_STATUS.md
plugins/Experimental_osmium_v3/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Experimental_osmium_v3/Source/ui/public/: index.html
plugins/Experimental_osmium_v3/Source/ui/public/js/: index.js
plugins/Experimental_osmium_v3/docs/: core_minmax_by_mode_single_header.csv  core_minmax_by_mode_single_header_plain.tsv  core_minmax_by_mode_with_description.csv  core_minmax_by_mode_with_description.tsv  core_minmax_by_mode_with_description_plain.tsv  exp_osm_v3_parameters.csv  exp_osm_v3_parameters.tsv
plugins/Morphant/: CMakeLists.txt  status.json
plugins/Morphant/Documentation/: KNOB_TECHNICAL_PURPOSE.md
plugins/Morphant/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Morphant/Source/ui/public/: index.html
plugins/Morphant/Source/ui/public/js/: index.js
plugins/Morphant/Source/ui/public/js/juce/: check_native_interop.js
plugins/NeuralPanic/: CMakeLists.txt  status.json
plugins/NeuralPanic/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/NeuralPanic/Design/: v1-style-guide.md  v1-test.html  v1-ui-spec.md
plugins/NeuralPanic/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/NeuralPanic/Source/ui/public/: index.html
plugins/NeuralPanic/Source/ui/public/js/: app.js
plugins/Osmium/: BUGFIX_REPORT.md  CMakeLists.txt  README.md  status.json
plugins/Osmium/.ideas/: parameter-spec.md  plan.md
plugins/Osmium/Design/: v1-ui-spec.md
plugins/Osmium/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Osmium/Source/ui/public/: index.html
plugins/Osmium/Source/ui/public/js/: index.js
plugins/gnarly3/: CMakeLists.txt
